Modificato index.htmlx

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <!-- un commento inizia con una parentesi angolare, un punto esclamativo e due trattini -->
 <!-- la prima riga non è un commento ma un comando "bang", serve per dire al browser che tipo di file è -->
 <!-- se non lo mettiamo, il browser prova comunque a leggerlo come un file html perché abbiamo usato questa estensione, ma potrebbe sbagliare -->
-<html>
+<html>	
 
 	<head>
+		<title>Error 404 (Not Found)!!1</title>
+		<meta charset="UTF-8">
+		<meta lang="en">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-
+	
 	<body>
-		<img src="logo.png">
-		<p>404. That's an error.</p>
-
-		<p>The requested URL /alskjdhljkdsdsfhjkgdsfgklhjdfsgzklhjfgjklhdfgklhjdfgjklh
-		was not found on this server. That's all we know.</p>
+		<img src="logo.png" alt="logo" title="logo">
+		<p><strong>404.</strong> That’s an error.</p>
+		<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
+		<p>That’s all we know.</p>
+		<img src="robot.png" alt="robot" title="robot">
 	</body>
 
 </html>
+
