--- a/index.html
+++ b/index.html
@@ -12,11 +12,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
+	<style>
+		body {
+			background-color: pink;		
+		
+		}
+		
+		span {
+			background-color: blue;
+			display: inline;
+
+		}
+
+
+
+	</style>
+		
 	<body>
 		<img src="logo.png" alt="logo" title="logo">
 		<p><strong>404.</strong> That’s an error.</p>
-		<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
-		<p>That’s all we know.</p>
+		<p><span>The requested URL <code>/sfasfsa</code> was not found on this server.</span></p>
+		<p><span>That’s all we know.</span></p>
 		<img src="robot.png" alt="robot" title="robot">
 	</body>
 
