Modificato in lab

--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 <!-- un commento inizia con una parentesi angolare, un punto esclamativo e due trattini -->
 <!-- la prima riga non è un commento ma un comando "bang", serve per dire al browser che tipo di file è -->
 <!-- se non lo mettiamo, il browser prova comunque a leggerlo come un file html perché abbiamo usato questa estensione, ma potrebbe sbagliare -->
-<html>	
 
-	<head>
-		<title>Error 404 (Not Found)!!1</title>
-		<meta charset="UTF-8">
-		<meta lang="en">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	
-	<style>
-		body {
-			background-color: pink;		
-		
+<html>
+
+        <head>
+                <title>Error 404 (Not Found)!!1</title>
+                <meta charset="UTF-8">
+                <meta lang="en">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        </head>
+
+        <style>
+                body {
+                       	margin: 7% auto 0;
+			width: 50%;
 		}
-		
-		span {
-			background-color: blue;
-			display: inline;
-
+		#status-code{
+			font-weight:bold;
 		}
 
 
+        </style>
 
-	</style>
-		
-	<body>
-		<img src="logo.png" alt="logo" title="logo">
-		<p><strong>404.</strong> That’s an error.</p>
-		<p><span>The requested URL <code>/sfasfsa</code> was not found on this server.</span></p>
-		<p><span>That’s all we know.</span></p>
-		<img src="robot.png" alt="robot" title="robot">
-	</body>
+        <body>
+                <img src="logo.png" alt="logo" title="logo">
+
+                <p><strong>404.</strong> That’s an error.</p>
+
+                <p><span>The requested URL <code>/sfasfsa</code> was not found on this server.</span></p>
+                <p><span>That’s all we know.</span></p>
+
+                <img src="robot.png" alt="robot" title="robot">
+
+        </body>
 
 </html>
-
